# NirithyAii

./: .gitignore  CMakeLists.txt  README.md
examples/: basic_tensor.cpp
include/core/: device.hpp  storage.hpp  tensor.hpp
src/core/: storage.cpp  tensor.cpp
